[package]
name = "tx"
version = "0.1.0"
authors = ["David L. Campbell <dcampbell24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
log = "0.4"
rust_decimal = "1.10"
serde = { version = "1.0", features = ["derive"] }
stderrlog = "0.5"
